--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,10 @@
         }
     ],
     "require": {
-        "guzzlehttp/guzzle": "6.3"
+        "guzzlehttp/guzzle": "7.5.*"
     },
     "require-dev": {
-        "phpunit/phpunit": "6.2.3"
+        "phpunit/phpunit": "9.5.*"
     },
     "autoload": {
         "psr-0": {
